commit for deploy

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                     <div>
                       <p>
                         <a href="#" class="pb-2 pr-2 pl-0"><span class="icon-facebook" style="font-size:24px; margin-right: 15px"></span></a>
-                        <a href="#"><span class="icon-twitter" style="font-size:24px; margin-right: 15px"></span></a>
+                        <a href="#about"><span class="icon-twitter" style="font-size:24px; margin-right: 15px"></span></a>
                         <a href="#"><span class="icon-instagram" style="font-size:24px; margin-right: 15px"></span></a>
                         <a href="#"><span class="icon-vimeo" style="font-size:24px"></span></a>
 
