--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 
       <div class="site-blocks-cover inner-page overlay" style="background-image: url(images/section_main_2.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
-        <div class="row align-items-center justify-content-center">
-          <div class="col-md-7 text-center" data-aos="fade">
-            <h1 class="font-secondary font-weight-bold text-uppercase">Improving human health and wellbeing has always been a common goal.</h1>
+        <div class="row" >
+          <div class="col-md-7" style="margin-left: 40px;margin-top: 40%">
+            <h2 style="color:white; font-size: 45px">Improving human health and wellbeing has always been a common goal.</h2>
           </div>
         </div>
       </div>
@@ -107,9 +107,9 @@
 
       <div class="site-blocks-cover inner-page overlay" style="background-image: url(images/section_main_3.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
-          <div class="row align-items-center justify-content-center">
-            <div class="col-md-7 text-center" data-aos="fade">
-              <h1 class="font-secondary font-weight-bold text-uppercase">Inspired by nature and living in harmony with nature</h1>
+          <div class="row">
+            <div class="col-md-7" style="margin-left: 40px; margin-top: 20%">
+              <h2 style="color: white; font-size: 45px; width: 200%">Inspired by nature and living in harmony with nature</h2>
             </div>
           </div>
         </div>
@@ -117,9 +117,9 @@
 
       <div class="site-blocks-cover inner-page overlay" style="background-image: url(images/section_main_4.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
-          <div class="row align-items-center justify-content-center">
-            <div class="col-md-7 text-center" data-aos="fade">
-              <h1 class="font-secondary font-weight-bold text-uppercase">Learn from the past, live in the present and look into the future</h1>
+          <div class="row">
+            <div class="col-md-7" style="margin-left: 40px; margin-top: 20%">
+              <h2 style="color: white; font-size: 45px; width: 200%">Learn from the past, live in the present and look into the future</h2>
             </div>
           </div>
         </div>
@@ -127,9 +127,9 @@
 
       <div class="site-blocks-cover inner-page overlay" style="background-image: url(images/section_main_5.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
-          <div class="row align-items-center justify-content-center">
-            <div class="col-md-7 text-center" data-aos="fade">
-              <h1 class="font-secondary font-weight-bold text-uppercase">Innovation consists of insight, exploration, infinite passion and perseverance</h1>
+          <div class="row">
+            <div style="margin-left: 40px; margin-top: 40%">
+              <h2 style="color: white; font-size: 45px">Innovation consists of insight, exploration, infinite passion and perseverance</h2>
             </div>
           </div>
         </div>
@@ -137,9 +137,10 @@
 
       <div class="site-blocks-cover inner-page overlay" style="background-image: url(images/section_main_1.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
-          <div class="row align-items-center justify-content-center">
-            <div class="col-md-6 text-center" data-aos="fade">
-              <h1 class="font-secondary  font-weight-bold text-uppercase">We, at Lyne Chemicals, are fighting COVID-19 together with you.</h1>
+          <div class="row" >
+            <div style="margin-left: 40px; margin-top: 35%">
+              <h2 style="color: white; font-size: 45px">We, at Lyne Chemicals,</h2>
+              <h2 style="color: white; font-size: 45px">are fighting COVID-19 together with you.</h2>
             </div>
           </div>
         </div>
