--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
         <div class="col-lg-5 mr-lg-auto py-5">
           <span class="caption d-block mb-2 font-secondary font-weight-bold">trading&service</span>
           <h2 class="site-section-heading text-uppercase font-secondary mb-5">What do we do?</h2>
-          <p>We import high quality ingredients and distribute to our many customers around the globe.</p>
-          <p>We want to ensure that we provide a service that is efficient and inclusive. We are eager to make our customers feel involved at every step of the way.</p>
-          <p>If you are seeking any particular product, our procurement team will assist to provide you with the best quality and price.</p>
-          <p>Working with our partners who provide personalized customer service and logistic support so we can meet your expectations.</p>
-          <p>Lyne Chemicals believes in bringing excellent products to the market that will make a positive impact on consumers’ lives.</p>
+          <p style="font-family: 'Times New Roman'">We import high quality ingredients and distribute to our many customers around the globe.</p>
+          <p style="font-family: 'Times New Roman'">We want to ensure that we provide a service that is efficient and inclusive. We are eager to make our customers feel involved at every step of the way.</p>
+          <p style="font-family: 'Times New Roman'">If you are seeking any particular product, our procurement team will assist to provide you with the best quality and price.</p>
+          <p style="font-family: 'Times New Roman'">Working with our partners who provide personalized customer service and logistic support so we can meet your expectations.</p>
+          <p style="font-family: 'Times New Roman'">Lyne Chemicals believes in bringing excellent products to the market that will make a positive impact on consumers’ lives.</p>
         </div>
       </div>
     </div>
