finish the requirements for clients

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="container">
         <div class="row" >
           <div class="col-md-7" style="margin-left: 40px;margin-top: 40%">
-            <h2 style="color:white; font-size: 45px">Improving human health and wellbeing has always been a common goal.</h2>
+            <h2 style="color:white; font-size: 45px">Improving human health and wellbeing has always been a common goal</h2>
           </div>
         </div>
       </div>
@@ -140,7 +140,7 @@
           <div class="row" >
             <div style="margin-left: 40px; margin-top: 35%">
               <h2 style="color: white; font-size: 45px">We, at Lyne Chemicals,</h2>
-              <h2 style="color: white; font-size: 45px">are fighting COVID-19 together with you.</h2>
+              <h2 style="color: white; font-size: 45px">are fighting COVID-19 together with you</h2>
             </div>
           </div>
         </div>
@@ -159,7 +159,7 @@
           <h2 class="site-section-heading text-uppercase font-secondary mb-5">Who are we?</h2>
           <p>Lyne Chemicals Limited is a distributor of ingredients for the food and pharmaceutical industry.</p>
           <p>We introduce a wide range of ingredients to bring high quality finished products to the market. We wish to   enhance human health and wellbeing.</p>
-          <p> Lyne Chemicals was established in 2016 and have built it up withexperience over time. We are excited to share our journey with you.......</p>
+          <p> Lyne Chemicals was established in 2016 and have built it up with experience over time. We are excited to share our journey with you.......</p>
         </div>
       </div>
     </div>
@@ -172,11 +172,11 @@
         <div class="col-lg-5 mr-lg-auto py-5">
           <span class="caption d-block mb-2 font-secondary font-weight-bold">trading&service</span>
           <h2 class="site-section-heading text-uppercase font-secondary mb-5">What do we do?</h2>
-          <p style="font-family: 'Times New Roman'">We import high quality ingredients and distribute to our many customers around the globe.</p>
-          <p style="font-family: 'Times New Roman'">We want to ensure that we provide a service that is efficient and inclusive. We are eager to make our customers feel involved at every step of the way.</p>
-          <p style="font-family: 'Times New Roman'">If you are seeking any particular product, our procurement team will assist to provide you with the best quality and price.</p>
-          <p style="font-family: 'Times New Roman'">Working with our partners who provide personalized customer service and logistic support so we can meet your expectations.</p>
-          <p style="font-family: 'Times New Roman'">Lyne Chemicals believes in bringing excellent products to the market that will make a positive impact on consumers’ lives.</p>
+          <p style="font-family:'ITC-AvantGarde-Gothic Medium','Noto Sans','sans-serif'">We import high quality ingredients and distribute to our many customers around the globe.</p>
+          <p>We want to ensure that we provide a service that is efficient and inclusive. We are eager to make our customers feel involved at every step of the way.</p>
+          <p>If you are seeking any particular product, our procurement team will assist to provide you with the best quality and price.</p>
+          <p>Working with our partners who provide personalized customer service and logistic support so we can meet your expectations.</p>
+          <p>Lyne Chemicals believes in bringing excellent products to the market that will make a positive impact on consumers’ lives.</p>
         </div>
       </div>
     </div>
@@ -238,28 +238,28 @@
         <div class="row border-responsive">
           <div class="col-md-6 col-lg-3 mb-4 mb-lg-0 border-right" data-aos="fade-up" data-aos-delay="">
             <div class="text-center">
-              <span class="flaticon-procurement display-4 d-block mb-3 text-primary"></span>
+              <span class="flaticon-money-bag display-4 d-block mb-3 text-primary"></span>
               <h3 class="text-uppercase h4 mb-3">Procurement</h3>
               <p>We seek a wide range of high-quality ingredients in food & pharmaceutical industry</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 mb-4 mb-lg-0 border-right" data-aos="fade-up" data-aos-delay="100">
             <div class="text-center">
-              <span class="flaticon-logistic display-4 d-block mb-3 text-primary"></span>
+              <span class="flaticon-box display-4 d-block mb-3 text-primary"></span>
               <h3 class="text-uppercase h4 mb-3">Logistics</h3>
               <p>We work closely with our logistic partner to deliver our products upon your request</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 mb-4 mb-lg-0 border-right" data-aos="fade-up" data-aos-delay="200">
             <div class="text-center">
-              <span class="flaticon-customer display-4 d-block mb-3 text-primary"></span>
+              <span class="flaticon-medal display-4 d-block mb-3 text-primary"></span>
               <h3 class="text-uppercase h4 mb-3">Customer Service </h3>
               <p> Our actions are driven by customers. We aim to provide excellent and personalized support to everyone.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 mb-4 mb-lg-0 border-right" data-aos="fade-up" data-aos-delay="">
             <div class="text-center">
-              <span class="flaticon-rd display-4 d-block mb-3 text-primary"></span>
+              <span class="flaticon-lab display-4 d-block mb-3 text-primary"></span>
               <h3 class="text-uppercase h4 mb-3">R&D</h3>
               <p>Taking our hands, seeking and exploring any new ideas and possibilities together with you.</p>
             </div>
@@ -276,7 +276,7 @@
           <div class="col-md-12" data-aos="fade">
             <h2 class="site-section-heading text-center text-uppercase">Recent News Posts</h2>
           </div>
-          <img src="images/news.jpg" alt="Girl in a jacket" style="width:100%;">
+          <img src="images/news.jpg" alt="Girl in a jacket" style="width:100%; height: 350px; object-fit: cover;">
           </div>
         </div>
     </div>
@@ -355,13 +355,13 @@
           <div class="col-lg-4" >
             <div class="p-4 mb-3 bg-white">
               <h3 class="h5 text-black mb-3">Contact Info</h3>
-              <p class="mb-0 font-weight-bold">Address</p>
+<!--              <p class="mb-0 font-weight-bold">Address</p>-->
               <p class="mb-4">Lyne Chemicals Limited, Phoenix House, Monahan Road, Cork T12 H1XY Ireland</p>
 
 <!--              <p class="mb-0 font-weight-bold">Phone</p>-->
 <!--              <p class="mb-4"><a href="#">+1 232 3235 324</a></p>-->
 
-              <p class="mb-0 font-weight-bold">Email Address</p>
+<!--              <p class="mb-0 font-weight-bold">Email Address</p>-->
               <p class="mb-0"><a href="#">enquiry@lynechemicals.com</a></p>
 
             </div>
