--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="site-blocks-cover inner-page overlay" style="background-image: url(images/section_main_2.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row" >
-          <div class="col-md-7" style="margin-left: 40px;margin-top: 40%">
+          <div class="col-md-7" style="margin-left: 20px;margin-top: 40%">
             <h2 style="color:white; font-size: 45px">Improving human health and wellbeing has always been a common goal</h2>
           </div>
         </div>
@@ -108,7 +108,7 @@
       <div class="site-blocks-cover inner-page overlay" style="background-image: url(images/section_main_3.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
           <div class="row">
-            <div class="col-md-7" style="margin-left: 40px; margin-top: 20%">
+            <div class="col-md-7" style="margin-left: 20px; margin-top: 20%">
               <h2 style="color: white; font-size: 45px; width: 200%">Inspired by nature and living in harmony with nature</h2>
             </div>
           </div>
@@ -118,7 +118,7 @@
       <div class="site-blocks-cover inner-page overlay" style="background-image: url(images/section_main_4.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
           <div class="row">
-            <div class="col-md-7" style="margin-left: 40px; margin-top: 20%">
+            <div class="col-md-7" style="margin-left: 20px; margin-top: 20%">
               <h2 style="color: white; font-size: 45px; width: 200%">Learn from the past, live in the present and look into the future</h2>
             </div>
           </div>
@@ -172,7 +172,7 @@
         <div class="col-lg-5 mr-lg-auto py-5">
           <span class="caption d-block mb-2 font-secondary font-weight-bold">trading&service</span>
           <h2 class="site-section-heading text-uppercase font-secondary mb-5">What do we do?</h2>
-          <p style="font-family:'ITC-AvantGarde-Gothic Medium','Noto Sans','sans-serif'">We import high quality ingredients and distribute to our many customers around the globe.</p>
+          <p>We import high quality ingredients and distribute to our many customers around the globe.</p>
           <p>We want to ensure that we provide a service that is efficient and inclusive. We are eager to make our customers feel involved at every step of the way.</p>
           <p>If you are seeking any particular product, our procurement team will assist to provide you with the best quality and price.</p>
           <p>Working with our partners who provide personalized customer service and logistic support so we can meet your expectations.</p>
@@ -240,7 +240,7 @@
             <div class="text-center">
               <span class="flaticon-money-bag display-4 d-block mb-3 text-primary"></span>
               <h3 class="text-uppercase h4 mb-3">Procurement</h3>
-              <p>We seek a wide range of high-quality ingredients in food & pharmaceutical industry</p>
+              <p>We seek a wide range of high-quality ingredients in the food & pharmaceutical industry</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 mb-4 mb-lg-0 border-right" data-aos="fade-up" data-aos-delay="100">
@@ -356,13 +356,13 @@
             <div class="p-4 mb-3 bg-white">
               <h3 class="h5 text-black mb-3">Contact Info</h3>
 <!--              <p class="mb-0 font-weight-bold">Address</p>-->
-              <p class="mb-4">Lyne Chemicals Limited, Phoenix House, Monahan Road, Cork T12 H1XY Ireland</p>
+              <p class="mb-4">A: Lyne Chemicals Limited, Phoenix House, Monahan Road, Cork T12 H1XY Ireland</p>
 
 <!--              <p class="mb-0 font-weight-bold">Phone</p>-->
 <!--              <p class="mb-4"><a href="#">+1 232 3235 324</a></p>-->
 
 <!--              <p class="mb-0 font-weight-bold">Email Address</p>-->
-              <p class="mb-0"><a href="#">enquiry@lynechemicals.com</a></p>
+              <p class="mb-0">E: enquiry@lynechemicals.com</a></p>
 
             </div>
           </div>
@@ -410,18 +410,18 @@
 
 
 
-                  <div class="row">
-                    <div class="col-md-12"><h3 class="footer-heading mb-4 text-white">Social Icons</h3></div>
-                    <div>
-                      <p>
-                        <a href="#" class="pb-2 pr-2 pl-0"><span class="icon-facebook" style="font-size:24px; margin-right: 15px"></span></a>
-                        <a href="#about"><span class="icon-twitter" style="font-size:24px; margin-right: 15px"></span></a>
-                        <a href="#"><span class="icon-instagram" style="font-size:24px; margin-right: 15px"></span></a>
-                        <a href="#"><span class="icon-vimeo" style="font-size:24px"></span></a>
+<!--                  <div class="row">-->
+<!--                    <div class="col-md-12"><h3 class="footer-heading mb-4 text-white">Social Icons</h3></div>-->
+<!--                    <div>-->
+<!--                      <p>-->
+<!--                        <a href="#" class="pb-2 pr-2 pl-0"><span class="icon-facebook" style="font-size:24px; margin-right: 15px"></span></a>-->
+<!--                        <a href="#about"><span class="icon-twitter" style="font-size:24px; margin-right: 15px"></span></a>-->
+<!--                        <a href="#"><span class="icon-instagram" style="font-size:24px; margin-right: 15px"></span></a>-->
+<!--                        <a href="#"><span class="icon-vimeo" style="font-size:24px"></span></a>-->
 
-                      </p>
-                    </div>
-                  </div>
+<!--                      </p>-->
+<!--                    </div>-->
+<!--                  </div>-->
 
 <!--                <form class="form-footer my-3">-->
 <!--                  <input type="text"  placeholder="search here...." name="search">-->
