fxied bugs and footer

--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
     </div>
   </div>
 
-  <footer class="site-wrap">
+  <div class="site-wrap">
 
-
-
-    <div class="site-mobile-menu">
+  <div class="site-mobile-menu">
       <div class="site-mobile-mFenu-header">
         <div class="site-mobile-menu-close mt-3">
           <span class="icon-close2 js-menu-toggle"></span>
@@ -365,45 +363,110 @@
     </div>
 
 
-    <footer class="container-fluid bg-grey py-5">
-      <div class="container">
-        <div class="row">
 
-              <div class=" col-xs-6 divBottomNav ms-dialogHidden" id="trBottomNav">
+  <!--    <footer class="container-fluid bg-grey py-5">-->
+<!--      <div class="container">-->
+<!--        <div class="row">-->
 
-                <table border="0" cellspacing="0" cellpadding="0" class="bottomNav bottomNavLinks">
-                  <tbody>
-                  <tr style="width:100%; height:20px;">
-                    <td align="center" valign="middle"><a href="https://www.eastman.com/Pages/Legal_Information.aspx">Legal</a><span class="bottomNavDivider">|</span></td>
-                    <td align="center" valign="middle"><a href="https://www.eastman.com/privacy/Pages/Overview.aspx">Privacy</a><span class="bottomNavDivider">|</span></td>
-                    <td align="center" valign="middle"><a href="https://www.eastman.com/Products/Pages/SDS_Finder.aspx">SDS Finder</a><span class="bottomNavDivider">|</span></td>
-                    <td align="center" valign="middle"><a href="https://www.eastman.com/Company/investors/Corporate_Governance/Documents/EMN_Stmt_on_Slavery_and_Human_Trafficking_March_2016.pdf" target="_blank">Supply Chain Responsibility</a><span class="bottomNavDivider">|</span></td>
-                    <td align="center" valign="middle"><a href="https://www.eastman.com/Pages/Site_Index.aspx">Site Index</a><span class="bottomNavDivider">|</span></td>
-                    <td align="center" valign="middle"><a href="https://www.eastman.com/Pages/Contact_Us.aspx">Contact Us</a></td>
-                  </tr>
-                  </tbody>
-                </table>
+<!--              <div class="divBottomNav ms-dialogHidden" id="trBottomNav">-->
 
-                <table border="0" cellspacing="0" width="800px" cellpadding="0" class="bottomNav">
-                  <tbody>
-                  <tr>
-                    <td align="left" valign="middle" width="210px">© 2020 Lyne Chemicals LTD. or its subsidiaries. All rights reserved.</td>
-                  </tr>
-                  <tr>
-                    <td align="left" valign="middle" width="210px">As used herein, ®  denotes registered trademark status in the Ireland only.</td>
-                  </tr>
-                  </tbody>
-                </table>
+<!--                <table border="0" cellspacing="0" cellpadding="0" class="bottomNav bottomNavLinks">-->
+<!--                  <tbody>-->
+<!--                  <tr style="width:100%; height:20px;">-->
+<!--                    <td align="center" valign="middle"><a href="https://www.eastman.com/Pages/Legal_Information.aspx">Standard Terms & Conditions of Sale</a><span class="bottomNavDivider">|</span></td>-->
+<!--                    <td align="center" valign="middle"><a href="https://www.eastman.com/privacy/Pages/Overview.aspx">Pravicy Policy</a><span class="bottomNavDivider">|</span></td>-->
+<!--                    <td align="center" valign="middle"><a href="https://www.eastman.com/Products/Pages/SDS_Finder.aspx">Contact Us</a><span class="bottomNavDivider">|</span></td>-->
+<!--                    <td align="center" valign="middle"><a href="https://www.eastman.com/Pages/Site_Index.aspx">Copyright 2020 Lyne Chemicals Limited</a><span class="bottomNavDivider">|</span></td>-->
+<!--                  </tr>-->
+<!--                  </tbody>-->
+<!--                </table>-->
 
-<!--                  <div class=" col-xs-6"><h3 class="text-white">Exploring new ideas for better health</h3></div>-->
+<!--                <table border="0" cellspacing="0" width="800px" cellpadding="0" class="bottomNav">-->
+<!--                  <tbody>-->
+<!--                  <tr>-->
+<!--                    <td align="left" valign="middle" width="210px">© 2020 Lyne Chemicals LTD. or its subsidiaries. All rights reserved.</td>-->
+<!--                  </tr>-->
+<!--                  <tr>-->
+<!--                    <td align="left" valign="middle" width="210px">As used herein, ®  denotes registered trademark status in the Ireland only.</td>-->
+<!--                  </tr>-->
+<!--                  </tbody>-->
+<!--                </table>-->
 
-              </div>
-              </div>
-            </div>
-          </div>
+
+<!--              </div>-->
+
+<!--        </div>-->
+<!--        <div class=" row"><h3 class="text-white">Exploring new ideas for better health</h3>-->
+<!--        </div>-->
+
+<!--      </div>-->
+
+  <!-- Footer -->
+  <footer class="page-footer font-small teal pt-4 container-fluid bg-grey ">
+
+    <!-- Footer Text -->
+    <div class="container-fluid text-center text-md-left">
+
+      <!-- Grid row -->
+      <div class="row">
+
+        <!-- Grid column -->
+        <div class=" divBottomNav ms-dialogHidden col-md-6 mb-md-0 mb-3"  id="trBottomNav">
+
+                          <table border="0" cellspacing="0" cellpadding="0" class="bottomNav bottomNavLinks">
+                            <tbody>
+                            <tr style="width:100%; height:20px;">
+                              <td align="center" valign="middle"><a href="https://www.eastman.com/Pages/Legal_Information.aspx">Standard Terms & Conditions of Sale</a><span class="bottomNavDivider">|</span></td>
+                              <td align="center" valign="middle"><a href="https://www.eastman.com/privacy/Pages/Overview.aspx">Pravicy Policy</a><span class="bottomNavDivider">|</span></td>
+                              <td align="center" valign="middle"><a href="https://www.eastman.com/Products/Pages/SDS_Finder.aspx">Contact Us</a><span class="bottomNavDivider">|</span></td>
+<!--                              <td align="center" valign="middle"><a href="https://www.eastman.com/Pages/Site_Index.aspx">Copyright 2020 Lyne Chemicals Limited</a><span class="bottomNavDivider">|</span></td>-->
+                            </tr>
+                            </tbody>
+                          </table>
+
+                          <table border="0" cellspacing="0" width="800px" cellpadding="0" class="bottomNav">
+                            <tbody>
+                            <tr>
+                              <td align="left" valign="middle" width="210px">© 2020 Lyne Chemicals LTD. or its subsidiaries. All rights reserved.</td>
+                            </tr>
+                            <tr>
+                              <td align="left" valign="middle" width="210px">As used herein, ®  denotes registered trademark status in the Ireland only.</td>
+                            </tr>
+                            </tbody>
+                          </table>
+
         </div>
-  </footer>
+        <!-- Grid column -->
 
+        <hr class="clearfix w-100 d-md-none pb-3">
+
+        <!-- Grid column -->
+        <div class="col-md-6 mb-md-0 mb-3">
+
+          <!-- Content -->
+          <h5 class="text-uppercase font-weight-bold text-white">Exploring new ideas for better health</h5>
+<!--          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio deserunt fuga perferendis modi earum-->
+<!--            commodi aperiam temporibus quod nulla nesciunt aliquid debitis ullam omnis quos ipsam, aspernatur id-->
+<!--            excepturi hic.</p>-->
+
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row -->
+
+    </div>
+    <!-- Footer Text -->
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+      <a href="#" class="text-white"> www.lynechemicals.com</a>
+    </div>
+    <!-- Copyright -->
+
+  </footer>
+  <!-- Footer -->
+  </div>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/jquery-ui.js"></script>
@@ -417,7 +480,6 @@
   <script src="js/aos.js"></script>
 
   <script src="js/main.js"></script>
-
 
   </body>
 </html>
