--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 <!--      </div>-->
 
   <!-- Footer -->
-  <footer class="page-footer font-small teal pt-4 container-fluid bg-grey ">
+  <footer class="page-footer font-small teal pt-4 container-fluid bg-grey py-4">
 
     <!-- Footer Text -->
     <div class="container-fluid text-center text-md-left">
@@ -429,9 +429,6 @@
                             <tr>
                               <td align="left" valign="middle" width="210px">© 2020 Lyne Chemicals LTD. or its subsidiaries. All rights reserved.</td>
                             </tr>
-                            <tr>
-                              <td align="left" valign="middle" width="210px">As used herein, ®  denotes registered trademark status in the Ireland only.</td>
-                            </tr>
                             </tbody>
                           </table>
 
@@ -441,13 +438,10 @@
         <hr class="clearfix w-100 d-md-none pb-3">
 
         <!-- Grid column -->
-        <div class="col-md-6 mb-md-0 mb-3">
+        <div class="col-md-6 mb-md-0 ">
 
           <!-- Content -->
-          <h5 class="text-uppercase font-weight-bold text-white">Exploring new ideas for better health</h5>
-<!--          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio deserunt fuga perferendis modi earum-->
-<!--            commodi aperiam temporibus quod nulla nesciunt aliquid debitis ullam omnis quos ipsam, aspernatur id-->
-<!--            excepturi hic.</p>-->
+          <h5 class="font-weight-bold text-white" style="text-align: center;">Exploring new ideas for better health</h5>
 
         </div>
         <!-- Grid column -->
@@ -459,8 +453,8 @@
     <!-- Footer Text -->
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="#" class="text-white"> www.lynechemicals.com</a>
+    <div class="footer-copyright text-center py-3">
+      <a href="#" class="text-white">     </a>
     </div>
     <!-- Copyright -->
 
