--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Neos &mdash; Website Template by Colorlib</title>
+    <title>Lyne Chemicals</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -427,7 +427,7 @@
                           <table border="0" cellspacing="0" width="800px" cellpadding="0" class="bottomNav">
                             <tbody>
                             <tr>
-                              <td align="left" valign="middle" width="210px">© 2020 Lyne Chemicals LTD. or its subsidiaries. All rights reserved.</td>
+                              <td align="left" valign="middle" width="210px">© 2020 Lyne Chemicals LTD. All rights reserved.</td>
                             </tr>
                             </tbody>
                           </table>
@@ -438,10 +438,10 @@
         <hr class="clearfix w-100 d-md-none pb-3">
 
         <!-- Grid column -->
-        <div class="col-md-6 mb-md-0 ">
+        <div style="margin-top: 40px" class="col-md-6 mb-md-0 ">
 
           <!-- Content -->
-          <h5 class="font-weight-bold text-white" style="text-align: center;">Exploring new ideas for better health</h5>
+          <h5 class="font-weight-bold text-white" style="text-align: center; font-family: 'Helvetica Neue'">Exploring new ideas for better health</h5>
 
         </div>
         <!-- Grid column -->
