adjust the solgan and change the font

--- a/index.html
+++ b/index.html
@@ -438,10 +438,10 @@
         <hr class="clearfix w-100 d-md-none pb-3">
 
         <!-- Grid column -->
-        <div style="margin-top: 40px" class="col-md-6 mb-md-0 ">
+        <div style="margin-top: 20px" class="col-md-6 mb-md-0 ">
 
           <!-- Content -->
-          <h5 class="font-weight-bold text-white" style="text-align: center; font-family: 'Helvetica Neue'">Exploring new ideas for better health</h5>
+          <h5 class="font-weight-bold text-white" style="text-align: center; ">Exploring new ideas for better health</h5>
 
         </div>
         <!-- Grid column -->
