fix the slogan on the mobile page

--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
       </div>
     </div>
 
-      <div class="site-blocks-cover inner-page overlay" style="background-image: url(images/section_main_3.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
+      <div class="site-blocks-cover inner-page" style="background-image: url(images/section_main_3.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
           <div class="row">
-            <div class="col-md-7" style="margin-left: 20px; margin-top: 20%">
-              <h2 style="color: white; font-size: 45px; width: 200%">Inspired by nature and living in harmony with nature</h2>
+            <div style=" margin-left: 20px; margin-top: 20%">
+              <h2 style="color: white; font-size: 45px;">Inspired by nature and living in harmony with nature</h2>
             </div>
           </div>
         </div>
@@ -116,8 +116,8 @@
       <div class="site-blocks-cover inner-page overlay" style="background-image: url(images/section_main_4.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
           <div class="row">
-            <div class="col-md-7" style="margin-left: 20px; margin-top: 20%">
-              <h2 style="color: white; font-size: 45px; width: 200%">Learn from the past, live in the present and look into the future</h2>
+            <div class="col-md-12" style="color: white; margin-left: 20px; margin-top: 20%">
+              <h2 style="color: white; font-size: 45px;">Learn from the past, live in the present and look into the future</h2>
             </div>
           </div>
         </div>
