add term and privacy pages

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="site-wrap">
 
   <div class="site-mobile-menu">
-      <div class="site-mobile-mFenu-header">
+      <div class="site-mobile-menu-header">
         <div class="site-mobile-menu-close mt-3">
           <span class="icon-close2 js-menu-toggle"></span>
         </div>
@@ -59,26 +59,9 @@
                   <div class="d-inline-block d-lg-none ml-md-0 mr-auto py-3"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
 
                   <ul class="site-menu js-clone-nav d-none d-lg-block">
-                    <li class="active"><a href="#home">Home</a></li>
-<!--                    <li class="has-children">-->
-<!--                      <a href="#about">About</a>-->
-<!--                      <ul class="dropdown arrow-top">-->
-<!--                        <li><a href="testimonials.html">Testimonials</a></li>-->
-<!--                        <li><a href="gallery.html">Gallery</a></li>-->
-<!--                        <li><a href="faq.html">FAQ</a></li>-->
-<!--                        <li><a href="why-choose-us.html">Why Choose Us</a></li>-->
-<!--                        <li class="has-children">-->
-<!--                          <a href="#">Sub Menus</a>-->
-<!--                          <ul class="dropdown">-->
-<!--                            <li><a href="testimonials.html">Testimonials</a></li>-->
-<!--                            <li><a href="gallery.html">Gallery</a></li>-->
-<!--                            <li><a href="why-choose-us.html">Why Choose Us</a></li>-->
-<!--                          </ul>-->
-<!--                        </li>-->
-<!--                      </ul>-->
-<!--                    </li>-->
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li ><a href="#about" >About</a></li>
+                    <li ><a href="#services">Services</a></li>
                     <li><a href="#culture">Values</a></li>
                     <li><a href="#contact">Contact</a></li>
                   </ul>
@@ -105,7 +88,7 @@
       <div class="site-blocks-cover inner-page" style="background-image: url(images/section_main_3.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
           <div class="row">
-            <div style=" margin-left: 20px; margin-top: 20%">
+            <div style=" margin-left: 35px; margin-top: 20%">
               <h2 style="color: white; font-size: 45px;">Inspired by nature and living in harmony with nature</h2>
             </div>
           </div>
@@ -171,7 +154,7 @@
           <h2 class="site-section-heading text-uppercase font-secondary mb-5">What do we do?</h2>
           <p>We import high quality ingredients and distribute to our many customers around the globe.</p>
           <p>We want to ensure that we provide a service that is efficient and inclusive. We are eager to make our customers feel involved at every step of the way.</p>
-          <p>If you are seeking any particular product, our procurement team will assist to provide you with the best quality and price.</p>
+          <p>If you are seeking any particular product, our procurement team will assist to provide you with the best products and service.</p>
           <p>Working with our partners who provide personalized customer service and logistic support so we can meet your expectations.</p>
           <p>Lyne Chemicals believes in bringing excellent products to the market that will make a positive impact on consumers’ lives.</p>
         </div>
@@ -415,9 +398,9 @@
                           <table border="0" cellspacing="0" cellpadding="0" class="bottomNav bottomNavLinks">
                             <tbody>
                             <tr style="width:100%; height:20px;">
-                              <td align="center" valign="middle"><a href="https://www.eastman.com/Pages/Legal_Information.aspx">Standard Terms & Conditions of Sale</a><span class="bottomNavDivider">|</span></td>
-                              <td align="center" valign="middle"><a href="https://www.eastman.com/privacy/Pages/Overview.aspx">Pravicy Policy</a><span class="bottomNavDivider">|</span></td>
-                              <td align="center" valign="middle"><a href="https://www.eastman.com/Products/Pages/SDS_Finder.aspx">Contact Us</a><span class="bottomNavDivider">|</span></td>
+                              <td align="center" valign="middle"><a href="terms%20condition.html">Standard Terms & Conditions of Sale</a><span class="bottomNavDivider">|</span></td>
+                              <td align="center" valign="middle"><a href="privacy%20policy.html">Pravicy Policy</a><span class="bottomNavDivider">|</span></td>
+                              <td align="center" valign="middle"><a href="#contact">Contact Us</a><span class="bottomNavDivider">|</span></td>
 <!--                              <td align="center" valign="middle"><a href="https://www.eastman.com/Pages/Site_Index.aspx">Copyright 2020 Lyne Chemicals Limited</a><span class="bottomNavDivider">|</span></td>-->
                             </tr>
                             </tbody>
