--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
       <div class="container">
         <div class="site-navbar bg-light">
           <div class="row align-items-center">
-            <div class="col-2" style = "margin-bottom: 20px; margin-top: 20px ">
+            <div class=" logo_lyne">
               <img src="images/logo-small.jpg" alt="Image" class="img-fluid">
 <!--              <h2 class="mb-0 site-logo"><a href="index.html" class="font-weight-bold text-uppercase">Lyne Chemicals</a></h2>-->
             </div>
             <div class="col-10">
               <nav class="site-navigation text-right" role="navigation">
                 <div class="container">
-                  <div class="d-inline-block d-lg-none ml-md-0 mr-auto py-3"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a></div>
+                  <div class="d-inline-block d-lg-none ml-md-0 mr-auto py-3"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="iconmenu h3"></span></a></div>
 
                   <ul class="site-menu js-clone-nav d-none d-lg-block">
                     <li><a href="#home">Home</a></li>
@@ -78,7 +78,7 @@
       <div class="site-blocks-cover inner-page overlay" style="background-image: url(images/section_main_2.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row" >
-          <div class="col-md-7" style="margin-left: 20px;margin-top: 40%">
+          <div class="col-md-7 main_page_black">
             <h2 style="color:white; font-size: 45px">Improving human health and wellbeing has always been a common goal</h2>
           </div>
         </div>
@@ -108,7 +108,7 @@
       <div class="site-blocks-cover inner-page" style="background-image: url(images/section_main_5.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
           <div class="row">
-            <div style="margin-left: 40px; margin-top: 40%">
+            <div class="main_page_ice">
               <h2 style="color: white; font-size: 45px">Innovation consists of insight, exploration, infinite passion and perseverance</h2>
             </div>
           </div>
