--- a/privacy policy.html
+++ b/privacy policy.html
@@ -76,7 +76,7 @@
       </div>
     <div class="site-blocks-cover inner-page overlay" style="background-image: url(images/hero_2.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="row align-items-center justify-content-center">
-        <div class="col-md-5 text-center" data-aos="fade">
+        <div class="col-md-7 text-center" data-aos="fade">
           <h1 class="text-uppercase">Privacy Policy</h1>
           <span class="caption d-block text-white">Lyne Chemicals LTD</span>
         </div>
@@ -84,7 +84,7 @@
     </div>
 
 <!--    <div class="slant-1"></div>-->
-      <div class="site-half first-section">
+      <div class="site-section">
           <div class="container">
               <style type="text/css">
                   p.p1 {
