--- a/index.html
+++ b/index.html
@@ -56,11 +56,9 @@
             <div class="col-10">
               <nav class="site-navigation text-right" role="navigation">
                 <div class="container">
-                  <div class="d-inline-block d-lg-none ml-md-0 mr-auto py-3"><a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="iconmenu h3"></span></a></div>
-
-                  <ul class="site-menu js-clone-nav d-none d-lg-block">
+                  <ul class="site-menu">
                     <li><a href="#home">Home</a></li>
-                    <li ><a href="#about" >About</a></li>
+                    <li ><a href="#about">About</a></li>
                     <li ><a href="#services">Services</a></li>
                     <li><a href="#culture">Values</a></li>
                     <li><a href="#contact">Contact</a></li>
