--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <nav class="site-navigation text-right" role="navigation">
                 <div class="container">
                   <ul class="site-menu">
-                    <li><a href="#home">Home</a></li>
+                    <li class="active"><a href="#home">Home</a></li>
                     <li ><a href="#about">About</a></li>
                     <li ><a href="#services">Services</a></li>
                     <li><a href="#culture">Values</a></li>
