finished the new requirements

--- a/privacy policy.html
+++ b/privacy policy.html
@@ -223,7 +223,7 @@
                       list-style-type: disc
                   }
               </style>
-              <p class="p3" style="line-height: 1.5;"><span class="s2"><strong>Privacy Policy</strong></span></p>
+              <p class="p3" style="line-height: 1.5;"><span class="s2"><strong>PRIVACY POLICY</strong></span></p>
               <p class="p4" style="line-height: 1.5;"><span class="s2"><strong>When using our website and submitting any personal data to us, you may have certain rights under the General Data Protection Regulation (GDPR) (EU) 2016/679 and other laws.</strong></span></p>
               <p class="p5" style="line-height: 1.5;"><br></p>
               <p class="p6" style="line-height: 1.5;"><span class="s3">Privacy:</span></p>
@@ -233,10 +233,10 @@
               <p class="p8" style="line-height: 1.5;"><br></p>
               <p class="p6" style="line-height: 1.5;"><span class="s3">What Information We Collect:</span></p>
               <ul class="ul1">
-                  <li class="li7" style="line-height: 1.5;"><span class="s2">Basic identity information you provide us with, such as name, address, e-mail address, contact details, your country and the company you work for;</span></li>
-                  <li class="li7" style="line-height: 1.5;"><span class="s2">&nbsp;The content of your communication or enquiry (with whom you correspond at our end, date, time, etc.);</span></li>
-                  <li class="li7" style="line-height: 1.5;"><span class="s2">&nbsp;Your preferences with regard to the communication medium;</span></li>
-                  <li class="li7" style="line-height: 1.5;"><span class="s2">&nbsp;Any other personal data you choose to provide us.</span></li>
+                  <li class="li7" style="line-height: 1.5;"><span class="s2"> Basic identity information you provide us with, such as name, address, e-mail address, contact details, your country and the company you work for;</span></li>
+                  <li class="li7" style="line-height: 1.5;"><span class="s2">The content of your communication or enquiry (with whom you correspond at our end, date, time, etc.);</span></li>
+                  <li class="li7" style="line-height: 1.5;"><span class="s2">Your preferences with regard to the communication medium;</span></li>
+                  <li class="li7" style="line-height: 1.5;"><span class="s2">Any other personal data you choose to provide us.</span></li>
               </ul>
               <p class="p9" style="line-height: 1.5;"><br></p>
               <p class="p6" style="line-height: 1.5;"><span class="s3">What We Do with Data Collected:</span></p>
@@ -271,7 +271,7 @@
               <p class="p10" style="line-height: 1.5;"><br></p>
               <p class="p12" style="line-height: 1.5;"><span class="s3">Your Rights:</span></p>
               <p class="p7" style="line-height: 1.5;"><span class="s2"><em>Lyne Chemicals Limited</em> do not sell, distribute or lease your personal information to third parties unless we have your permission or are required by law.<span class="Apple-converted-space">&nbsp;</span></span></p>
-              <p class="p7" style="line-height: 1.5;"><span class="s2">If you wish to have access to your personal data that we collected, you can&nbsp;</span><span class="s3">contact us</span><span class="s2">&nbsp;for a copy of your information any time. You have the right to ask that any personal data pertaining to you that is inaccurate, is corrected free of charge.</span></p>
+              <p class="p7" style="line-height: 1.5;"><span class="s2">If you wish to have access to your personal data that we collected, you can&nbsp;</span><span class="s3"><a href="index.html#contact" class="contact_link">contact us</a></span><span class="s2">&nbsp;for a copy of your information any time. You have the right to ask that any personal data pertaining to you that is inaccurate, is corrected free of charge.</span></p>
               <p class="p10" style="line-height: 1.5;"><br></p>
               <p class="p12" style="line-height: 1.5;"><span class="s3">Protecting Rights of Third Parties:</span></p>
               <p class="p7" style="line-height: 1.5;"><span class="s2">If any messages you make on our website contain information about third parties, you must make sure you have permission to include that information in your posting. While we are not legally liable for the actions of our users, we will delete any posts about which we are notified, if such postings violate the privacy rights of others.</span></p>
