--- a/index.html
+++ b/index.html
@@ -322,11 +322,9 @@
 
               <div class="row form-group">
                 <div class="col-md-12">
-                  <input type="submit" value="Send Message" class="btn btn-primary text-white px-4 py-2">
+                  <input type="submit" value="Send Message" class="btn btn-primary text-white px-4 py-2 sendbtn">
                 </div>
               </div>
-              <input type="hidden" name="_next" value="https://www.google.com/"/>
-
             </form>
           </div>
 
@@ -397,7 +395,7 @@
                             <tbody>
                             <tr style="width:100%; height:20px;">
                               <td align="center" valign="middle"><a href="terms%20condition.html">Standard Terms & Conditions of Sale</a><span class="bottomNavDivider">|</span></td>
-                              <td align="center" valign="middle"><a href="privacy%20policy.html">Pravicy Policy</a><span class="bottomNavDivider">|</span></td>
+                              <td align="center" valign="middle"><a href="privacy%20policy.html">Privacy Policy</a><span class="bottomNavDivider">|</span></td>
                               <td align="center" valign="middle"><a href="#contact">Contact Us</a><span class="bottomNavDivider">|</span></td>
 <!--                              <td align="center" valign="middle"><a href="https://www.eastman.com/Pages/Site_Index.aspx">Copyright 2020 Lyne Chemicals Limited</a><span class="bottomNavDivider">|</span></td>-->
                             </tr>
